# chainlit-template

./: .gitignore  CHANGELOG.md  Cloudbuild.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ruff_autofix.yml
app/: app.py  chainlit.md  requirements.txt
app/.chainlit/: config.toml
infra/: .env.sample  README.md  build_staging.sh  deploy_branch.sh  deploy_prod.sh  deploy_staging.sh  load_secrets.sh  main.tf  start.sh  terraform.tfvars.sample  variables.tf
literal/: literal_utils.py  test_literal.py
openai-assistant/: .env.example  README.md  agentloader.py  annotations.py  app.py  assistants.json  chainlit_utils.py  create_assistant.py  mailchimp.py
openai-assistant/cl_events/: oauth_callback.py  on_chat_resume.py  on_chat_start.py  step.py
openai-assistant/test/: fixture.py  settings.json  test_annotations.py  test_assistant.py  test_assistant_handler.py  test_async_streaming.py  test_chainlit.py  test_chat_resume.py  test_completion.py  test_threads.py  (+10 more)
openai_assistant/: .env.example  Dockerfile  README.md  app.py  create_assistant.py  pyproject.toml
openai_assistant/.chainlit/: config.toml
openai_assistant/cl_events/: oauth_callback.py  on_audio.py  on_chat_resume.py  on_chat_start.py  step.py
openai_assistant/test/: fixture.py  test_annotations.py  test_assistant_handler.py  test_chat_resume.py  test_file_upload.py  test_files_handler.py  test_literal.py  test_mailchimp.py  test_streaming_async.py  test_thread_handler.py  test_vector_store_files_handler.py  test_vector_store_handler.py
openai_assistant/test/chainlit_tests/: citations.py  elements.py  resume_chat.py  streaming.py  test_thread_handler.py
openai_assistant/utils/: agent_template.yml  annotations.py  api_client_class.py  assistant_handler.py  chainlit_utils.py  event_handler.py  files_handler.py  liminal_flow.yml  main.py  openai_handler.py  openai_utils.py  vector_store_files_handler.py  vector_stores_handler.py
public/: stylesheet.css
test/: test_annotations.py
(+19 files in other folders)
