[tool.poetry]
name = "chainlit-template"
version = "0.1.0"
description = ""
authors = ["BCM <dahifi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.1"
chainlit = {  path = '/Users/bcm/gh/chainlit/backend' }
mailchimp-marketing = "^3.0.80"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
